--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Materialize CSS and particles.js -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
 	<!-- Fonts and Icons -->
 	<script src="https://kit.fontawesome.com/8f5e64127f.js" crossorigin="anonymous"></script>
