--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
 	<!-- Fonts and Icons -->
-	<script src="https://kit.fontawesome.com/8f5e64127f.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/c093948728.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Oswald|Roboto&display=swap" rel="stylesheet">
 
 	<!-- My own stuff -->
@@ -181,22 +181,18 @@
 
 </main>
 
-<div id="particles-js"></div>
+<div id="particles-js" style="background-image: url('img/background.jpg');"></div>
 
 <footer class="page-footer light-blue accent-3">
 	<div class="container">
 		<div class="row">
-		<div class="col l6 s12">
-			<h5 class="white-text">Contact</h5>
-			<p>Lorem Ipsum etc etc</p>
-		</div>
-		<div class="col l4 offset-l2 s12">
-			<h5 class="white-text">Links</h5>
-			<ul>
-			<li><a class="white-text" href="#!"><i class="fab fa-github"></i> FillipdotS</a></li>
-			<li><a class="white-text" href="#!"><i class="fas fa-envelope"></i> fillip.serov@gmail.com</a></li>
-			</ul>
-		</div>
+			<div class="col s12">
+				<h5 class="white-text">Links</h5>
+				<ul>
+					<li><a class="white-text" href="https://github.com/FillipdotS"><i class="fab fa-github"></i> FillipdotS</a></li>
+					<li><a class="white-text" href="mailto:fillip.serov@gmail.com"><i class="fas fa-envelope"></i> fillip.serov@gmail.com</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="footer-copyright">
