Change summary and link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					Hi, I'm a student studying Software Engineering in Swansea, Wales.
 				</p>
 				<p>
-					Programming has been a huge passion and hobby of mine for the past five years, I love learning new things and the problem solving process. So far I've done a lot of work in web development, but currently I'm more interested in the backend side of things, especially Docker.
+					Programming has been a huge passion and hobby of mine for the past five years, I love learning new things and the problem solving process. So far I've done a lot of work in web development, especially with React and Django. Currently looking for an industrial placement in for my 3rd year in university.
 				</p>
 			</section>
 
@@ -204,7 +204,7 @@
 							</div>
 							<div class="col-sm-8 mt-2">
 								<span class="float-right">
-									<a class="btn btn-primary" href="https://iportal.cytanet.com.cy/ENTERTAINMENT/Games/game-L2.html">
+									<a class="btn btn-primary" href="https://github.com/FillipdotS/GoldbergsHouse">
 										<i class="material-icons" style="font-size:19px; vertical-align: middle;">visibility</i>
 										<span>View Project</span>
 									</a>
