--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarText">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="https://github.com/FillipdotS">My GitHub</a>
+						</li>
+					</ul>
 					<span class="navbar-text ml-auto">
 						Hosted on <a href="https://github.com/FillipdotS/FillipdotS.github.io">Github</a>
 					</span>
