Update link and About

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 					Hi, I'm a student studying Software Engineering in Swansea, Wales.
 				</p>
 				<p>
-					Programming has been a huge passion and hobby of mine for the past five years, I love learning new things and the problem solving process. So far I've done a lot of work in web development, especially with React and Django. Currently looking for an industrial placement in for my 3rd year in university.
+					I taught myself programming a few years ago and loved it, and it is now a huge passion of mine. University has complemented my practical skills with good theoretical knowledge, as well as giving me many opportunities to work together with people.
+					
+					Currently for an industrial placement to gain valuable experience and to apply myself to my full potential.
 				</p>
 			</section>
 
@@ -138,9 +140,9 @@
 										<i class="material-icons" style="font-size:19px; vertical-align: middle;">visibility</i>
 										<span>View Project</span>
 									</a>
-									<a class="btn btn-primary disabled" href="#">
+									<a class="btn btn-primary" href="https://github.com/FillipdotS/corona-traveler">
 										<i class="material-icons" style="font-size:19px; vertical-align: middle;">code</i>
-										<span>Code Private</span>
+										<span>Source Code</span>
 									</a>
 								</span>
 							</div>
