--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Fillip Serov" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://fillipdots.github.io/" />
+	<meta property="og:image" content="https://fillipdots.github.io/assets/img/meta_image.png" />
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="assets/css/portfolio.css">
 	<title>Fillip Serov</title>
