Add CT scan project (+ some small changes)

--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
 			<section>
 				<h2><b>About</b></h2>
 				<p>
-					Hi, I'm a student studying Software Engineering in Swansea, Wales.
+					Hi, I'm a second year student studying Software Engineering in Swansea, Wales.
 				</p>
 				<p>
 					I taught myself programming a few years ago and loved it, and it is now a huge passion of mine. University has complemented my practical skills with good theoretical knowledge, as well as giving me many opportunities to work together with people.
-					
-					Currently for an industrial placement to gain valuable experience and to apply myself to my full potential.
+				</p>
+				<p>
+					Below you'll find the projects I am most proud of and which I believe show my ability really well.
 				</p>
 			</section>
 
@@ -183,6 +184,38 @@
 										<span>View Project</span>
 									</a>
 									<a class="btn btn-primary" href="https://github.com/FillipdotS/xmr-bot">
+										<i class="material-icons" style="font-size:19px; vertical-align: middle;">code</i>
+										<span>Source Code</span>
+									</a>
+								</span>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<hr class="project-divider">
+
+				<!-- CT Scan Renderer -->
+				<div class="row my-4">
+					<div class="col-md-5">
+						<img src="https://raw.githubusercontent.com/FillipdotS/ct-scan-renderer/master/img/diffuse.gif" class="img-fluid shadow-lg" alt="CT Scan Renderer">
+					</div>
+					<div class="col-md-7">
+						<h3 class="mt-2"><b>CT Scan Renderer</b></h3>
+						<p>
+							A program written in Java to take CT scan data (3D matrix of integer values) and provide several ways to render them. More information on the techniques used is available on GitHub.
+						</p>
+						<ul class="project-highlights">
+							<li>Diffuse shading</li>
+							<li>No "3D models" used</li>
+						</ul>
+						<div class="row">
+							<div class="col-sm-4 tech-stack">
+								<img src="assets/img/logos/java.png">
+							</div>
+							<div class="col-sm-8 mt-2">
+								<span class="float-right">
+									<a class="btn btn-primary" href="https://github.com/FillipdotS/ct-scan-renderer">
 										<i class="material-icons" style="font-size:19px; vertical-align: middle;">code</i>
 										<span>Source Code</span>
 									</a>
