--- a/index.html
+++ b/index.html
@@ -198,7 +198,27 @@
 				<!-- CT Scan Renderer -->
 				<div class="row my-4">
 					<div class="col-md-5">
-						<img src="https://raw.githubusercontent.com/FillipdotS/ct-scan-renderer/master/img/diffuse.gif" class="img-fluid shadow-lg" alt="CT Scan Renderer">
+						<div id="carouselExampleControls" class="carousel slide shadow-lg" data-ride="true">
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<img class="d-block w-100" src="https://raw.githubusercontent.com/FillipdotS/ct-scan-renderer/master/img/diffuse.gif" alt="Diffuse rendering">
+								</div>
+								<div class="carousel-item">
+									<img class="d-block w-100" src="https://raw.githubusercontent.com/FillipdotS/ct-scan-renderer/master/img/volume.gif" alt="Volume rendering">
+								</div>
+								<div class="carousel-item">
+									<img class="d-block w-100" src="https://raw.githubusercontent.com/FillipdotS/ct-scan-renderer/master/img/slides.gif" alt="Slice rendering">
+								</div>
+							</div>
+							<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
 					</div>
 					<div class="col-md-7">
 						<h3 class="mt-2"><b>CT Scan Renderer</b></h3>
@@ -206,8 +226,10 @@
 							A program written in Java to take CT scan data (3D matrix of integer values) and provide several ways to render them. More information on the techniques used is available on GitHub.
 						</p>
 						<ul class="project-highlights">
-							<li>Diffuse shading</li>
-							<li>No "3D models" used</li>
+							<li>Diffuse shading with moving light source</li>
+							<li>Volume rendering</li>
+							<li>Slice rendering</li>
+							<li>No "3D models" used, all images generated from 3D matrix of data</li>
 						</ul>
 						<div class="row">
 							<div class="col-sm-4 tech-stack">
@@ -235,7 +257,7 @@
 					<div class="col-md-7">
 						<h3 class="mt-2"><b>Goldberg's House</b></h3>
 						<p>
-							A 2D physics puzzle game made in Unity (C#) for the Logipaignion 2018 competition, winning 2nd place. It was created in a two-person team, where my main responsibilty was the programming. Used Git for version control.
+							A 2D physics puzzle game made in Unity (C#) for the Logipaignion 2018 competition, winning 2nd place. It was created in a two-person team, where my main responsibility was the programming. Used Git for version control.
 						</p>
 						<ul class="project-highlights">
 							<li>Large project that took six months to finish</li>
